[tool.poetry]
name = "crew-ai-system"
version = "0.1.0"
description = "Advanced Crew AI System for Asset Recovery"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^1.12.0"
pyyaml = "^6.0.1"
twilio = "^8.12.0"
hubspot-api-client = "^8.1.0"
groq = "^0.4.1"
openrouter = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

